# GSM4-v2-IDF

./: .gitignore  AGENTS.md  GSM4-v2-IDF-1.code-workspace  README.md
.github/workflows/: ci.yml
docs/: CODEX_RULES.md  START_HERE.md
docs/analysis/: 03_entry_points.md  05_bus_access_union_fn_refined.md  07_interaction_scores_v2_fanout.csv  08_interaction_clusters_v2_fanout.md  13_dependency_edges.csv  13_system_recomposition.md  A_calls_cluster_all_cpp.md  README.md
docs/architecture/: IDF_TARGET_ARCH.md
docs/bringup/: phase0_bench_checklist.md  phase0_proposal.md
docs/contracts/: audio_runtime.md  config_store.md  in_call_dtmf_control.md  modem_core.md  power_and_physical_io.md  serial_transport.md  timebase.md
docs/contracts/v1/: sensor_and_visual_ui.md  wifi_web_control_plane.md
docs/hardware/: ESP32_PINOUTS.md
docs/interfaces/: COMMANDS_EVENTS.md
docs/project/: CONTEXT.md  DECISIONS.md  REPO_AUDIT.md  REWRITE_PROGRAMME.md  TRACEABILITY.md  bringup_all_phases.md
docs/requirements/: LEGACY_FUNCTIONAL_REQUIREMENTS.md
docs/security/: security_policy.md
docs/setup guides/: ESP32_WROOM_SERIAL_DEPLOY_GUIDE.md  ESP_IDF_SETUP_GUIDE.md
docs/tests/: ACCEPTANCE_INVARIANTS.md
firmware/: CMakeLists.txt  partitions_16mb.csv  sdkconfig.defaults  sdkconfig.defaults.ci-secure  sdkconfig.defaults.ci-test  sdkconfig.defaults.dev  sdkconfig.defaults.release
firmware/components/bsp_gsm4_rev4/: CMakeLists.txt
firmware/components/bsp_gsm4_rev4/include/: board_pins.h  bsp.h
firmware/components/bsp_gsm4_rev4/src/: bsp_gpio.c  bsp_gsm4_rev4.c  bsp_i2c.c  bsp_init.c  bsp_interrupts.c
firmware/components/bsp_gsm4_rev4/test/: test_bsp_phase0_logic.c
firmware/components/drv_bq25622/: CMakeLists.txt
firmware/components/drv_bq25622/include/: drv_bq25622.h
firmware/components/drv_bq25622/src/: drv_bq25622.c
firmware/components/drv_bq25622/test/: test_drv_bq25622.c
firmware/components/drv_kts1622/: CMakeLists.txt
firmware/components/drv_kts1622/include/: drv_kts1622.h
firmware/components/drv_kts1622/src/: drv_kts1622.c
firmware/components/drv_kts1622/test/: test_drv_kts1622.c
firmware/components/gsm4_example/: CMakeLists.txt
firmware/components/gsm4_example/include/: gsm4_example.h
firmware/components/gsm4_example/src/: gsm4_example.c
firmware/components/gsm4_example/test/: test_gsm4_example_clock.c  test_gsm4_example_math.c
firmware/components/gsm4_example/test/mocks/: mock_gsm4_example.yaml
firmware/components/i2c_bus/: CMakeLists.txt
firmware/components/i2c_bus/include/: i2c_bus.h
firmware/components/i2c_bus/src/: i2c_bus_idf.c
firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.c
firmware/tests/host/common/: fake_i2c_bus.c  fake_i2c_bus.h
firmware/tests/host/mock/: CMakeLists.txt
firmware/tests/host/mock/main/: CMakeLists.txt  test_fake_i2c_bus_mock.c  test_runner_mock.c
firmware/tests/host/unit/: CMakeLists.txt
firmware/tests/host/unit/main/: CMakeLists.txt  test_fake_i2c_bus_unit.c  test_runner_unit.c
firmware/web_fallback/: index.html
tools/: build_firmware.sh  check_release_policy.sh  idf_env.sh  register_idf_for_vscode.sh  test_mock.sh  test_secure_smoke.sh  test_unit.sh
